# llama.cpp

./: BLOCKING_OPERATIONS_ANALYSIS.md  CMakeLists.txt  GFX906_ISA_OPTIMIZATION_STATUS.md  GFX906_OPTIMIZATION_ROADMAP.md  HBM2_PREFETCHING_INVESTIGATION.md  README.md  TELEMETRY_OPTIMIZATION_OPPORTUNITIES.md  VEGA_7NM_ISA_OPTIMIZATION_OPPORTUNITIES.md
common/: sampling.cpp
ggml/: CMakeLists.txt
ggml/src/ggml-cuda/: common.cuh  convert.cu  ggml-cuda.cu  mmq.cu  mmq.cuh  mul-mat-f32-gfx906.cuh  vecdotq.cuh
ggml/src/ggml-hip/: CMakeLists.txt
src/: llama-context.cpp  llama-kv-cache.cpp
